--- a/semana15/semana15/introducao-typescript/package.json
+++ b/semana15/semana15/introducao-typescript/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"clear && tsc && node ./build/index.js"
+    "start-exercicio1":"tsc && node ./build/exercicio1.js",
+    "start-exercicio2":"tsc && node ./build/exercicio2.js",
+    "start-exercicio3":"tsc && node ./build/exercicio3.js",
+    "start-exercicio4":"tsc && node ./build/exercicio4.js"
 
   },
   "keywords": [],
